refactor - added new apis
